# Catalog_market

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 335b07a16226_create_table.py
app/: .env  main.py  q.py
app/core/: config.py  constants.py
app/db/: main_db.py  table.py
app/routers/: main.py
app/schemas/: pydentic_schemas.py
app/scripts/: get_data_from_csv.py
app/services/: get_data_and_procesing_in_csv.py
app/services/work_to_csv_data/: get_data_and_procesing_in_csv.py
app/static/css/: style.css
app/templates/: base.html  index.html  kids.html  mens.html  womens.html
