[project]
name = "catalog-market"
version = "0.1.0"
description = ""
authors = [
    {name = "Mtv288",email = "meremkulovtv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
